--- a/SnakeWPF/Views/Board.xaml
+++ b/SnakeWPF/Views/Board.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="SnakeWPF.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SnakeWPF"
-        xmlns:converters="clr-namespace:SnakeWPF.Converters"
-        mc:Ignorable="d"
-        DataContext="{Binding WindowOptions, Source={StaticResource Locator}}" x:Name="Window"
-        Title="MainWindow" Height="{Binding WindowHeight}" Width="{Binding WindowWidth}" ResizeMode="CanMinimize">
+﻿<Page x:Class="SnakeWPF.Views.Board"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:SnakeWPF.Views"
+      xmlns:vm="clr-namespace:SnakeWPF.ViewModels"
+      mc:Ignorable="d" 
+      d:DesignHeight="300" d:DesignWidth="300"
+      Title="Board">
 
-    <!--<Grid>
+    <Grid>
         <Canvas DataContext="{Binding Source={StaticResource Locator}, Path=Snake}"
              Background="DarkGreen" FocusManager.FocusedElement="{Binding ElementName=SnakeHead}">
             <Canvas.InputBindings>
@@ -36,28 +36,5 @@
             <Rectangle Focusable="True" x:Name="SnakeHead" Width="{Binding Width}" Height="{Binding Height}" Fill="Crimson"
                 Canvas.Top="{Binding HeadY}" Canvas.Left="{Binding HeadX}"/>
         </Canvas>
-
-    </Grid>-->
-
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*" />
-            <ColumnDefinition  Width="*"/>
-        </Grid.ColumnDefinitions>
-
-        <Grid Grid.Column="0" >
-            <Frame x:Name="Board" 
-                   Content="{Binding BoardPage, Converter={converters:ApplicationPageConverter}}"></Frame>
-        </Grid>
-
-        <Grid Grid.Column="1" >
-            <Frame x:Name="SideMenu" 
-                   Content="{Binding SideMenu, Converter={converters:ApplicationPageConverter}}"></Frame>
-        </Grid>
     </Grid>
-
-</Window>
-
-    
-    
-    
+</Page>
