--- a/SnakeWPF/Views/SideMenu.xaml
+++ b/SnakeWPF/Views/SideMenu.xaml
@@ -3,12 +3,28 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:SnakeWPF.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="600" d:DesignWidth="160"
       Title="SideMenu">
 
-    <Grid Background="Brown">
-        <TextBlock>Test</TextBlock>
+    <Grid Background="Brown" DataContext="{Binding Food, Source={StaticResource Locator}}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="17*"/>
+            <ColumnDefinition Width="23*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <TextBlock Text="{Binding X, StringFormat=X: {0}}" />
+        <TextBlock Text="{Binding Y, StringFormat=Y: {0}}" Grid.Column="1" Margin="14,0,10,0"  />
+
+        <TextBlock DataContext="{Binding Snake, Source={StaticResource Locator}}" 
+                   Text="{Binding HeadX, StringFormat=HeadX: {0}}"
+                   Grid.Row="1"/>
+
+        <TextBlock DataContext="{Binding Snake, Source={StaticResource Locator}}" 
+                   Text="{Binding HeadY, StringFormat=HeadY: {0}}"
+                   Grid.Row="1" Grid.Column="1"/>
     </Grid>
 </Page>
